backend user done

--- a/bs_backend/Dockerfile
+++ b/bs_backend/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.12.9-bullseye
 RUN apt update && apt install -y gettext
 
-WORKDIR /backend
+WORKDIR /bs_backend
 
-COPY ./requirements.txt /objectApplication/requirements.txt
-RUN pip install --prefix=/pip-dir -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+COPY ./requirements.txt ./requirements.txt
+RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 
-COPY . /objectApplication
+COPY . /bs_backend
 
 
 CMD ["/bin/sh", "start.sh"]
