--- a/bs_backend/.env
+++ b/bs_backend/.env
@@ -6,7 +6,7 @@ MYSQL_USER="root"
 MYSQL_PASSWORD="admin123K#"  
 
 # google
-GOOGLE_CLIENT_ID="client_id"
+GOOGLE_CLIENT_ID="362513109575-gsucm4rqcbdbo7um5g91t3tju1okltic.apps.googleusercontent.com"
 
 # url
 IMAGE_BASE_URL="http://localhost:3000/images/"
