feat: mobile done

--- a/bs_backend/.env
+++ b/bs_backend/.env
@@ -1,12 +1,9 @@
 MYSQL_HOST="host.docker.internal"
-MYSQL_PORT="3306"
-MYSQL_ROOT_PASSWORD="admin123K#"
+MYSQL_PORT=3306
 MYSQL_DATABASE="bs"
 MYSQL_USER="root"
-MYSQL_PASSWORD="admin123K#"  
-
+MYSQL_PASSWORD="admin123K#"
 # google
 GOOGLE_CLIENT_ID="362513109575-gsucm4rqcbdbo7um5g91t3tju1okltic.apps.googleusercontent.com"
-
 # url
-IMAGE_BASE_URL="http://localhost:3000/images/"
+IMAGE_BASE_URL="http://1.1.1.1:8010/images/"
