--- a/bs_backend/requirements.txt
+++ b/bs_backend/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
+cryptography==44.0.2
 Django==5.1.6
 django-cors-headers==4.7.0
 django-extensions==3.2.3
@@ -15,6 +17,7 @@ idna==3.10
 packaging==24.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.0.1
