--- a/bs_backend/.env
+++ b/bs_backend/.env
@@ -1,9 +1,22 @@
+DEBUG=True
 MYSQL_HOST="host.docker.internal"
 MYSQL_PORT=3306
 MYSQL_DATABASE="bs"
 MYSQL_USER="root"
 MYSQL_PASSWORD="admin123K#"
+# redis
+REDIS_HOST="host.docker.internal"
+REDIS_PORT=6379
+REDIS_DB_CELERY=10
+# es
+ES_HOST="https://host.docker.internal"
+ES_PORT=9200
+ES_USER="elastic"
+ES_PASSWORD="RdfmO2cc1Z7SgzF3Au"
+ES_INDEX_NAME="bs"
 # google
 GOOGLE_CLIENT_ID="362513109575-gsucm4rqcbdbo7um5g91t3tju1okltic.apps.googleusercontent.com"
 # url
-IMAGE_BASE_URL="http://1.1.1.1:8010/images/"
+IMAGE_BASE_URL="http://127.0.0.1/bs/images/"
+# sentry
+SENTRY_DSN="https://6a58bfe6adc3a9bf54c00e68d89b0a03@o4505327264661504.ingest.us.sentry.io/4509015078469632"
