--- a/bs_backend/.env.sample
+++ b/bs_backend/.env.sample
@@ -1,9 +1,22 @@
+DEBUG=False
 MYSQL_HOST="host.docker.internal"
 MYSQL_PORT="xxx"
 MYSQL_DATABASE="xxx"
 MYSQL_USER="xxx"
-MYSQL_PASSWORD="xxx"%   
+MYSQL_PASSWORD="xxx"%
+# redis
+REDIS_HOST="host.docker.internal"
+REDIS_PORT=6379
+REDIS_DB_CELERY=10
+# es
+ES_HOST="https://host.docker.internal"
+ES_PORT=9200
+ES_USER="elastic"
+ES_PASSWORD="xxxx" 
+ES_INDEX_NAME="bs"
 # google
 GOOGLE_CLIENT_ID="xxx"
 # url
-IMAGE_BASE_URL="xxx"
+IMAGE_BASE_URL="http://[nginxip]/bs/images/"
+# sentry
+SENTRY_DSN="https://"
