--- a/bs_backend/Dockerfile
+++ b/bs_backend/Dockerfile
@@ -4,7 +4,8 @@ RUN apt update && apt install -y gettext
 WORKDIR /bs_backend
 
 COPY ./requirements.txt ./requirements.txt
-RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+# RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+RUN pip install -r requirements.txt
 
 COPY . /bs_backend
 
