--- a/bs_backend/requirements.txt
+++ b/bs_backend/requirements.txt
@@ -1,8 +1,16 @@
+amqp==5.3.1
+annotated-types==0.7.0
 asgiref==3.8.1
+billiard==4.2.1
 cachetools==5.5.2
+celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==44.0.2
 Django==5.1.6
 django-cors-headers==4.7.0
@@ -11,17 +19,31 @@ django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 dotenv==0.9.9
+elastic-transport==8.17.1
+elasticsearch==8.17.2
 google-auth==2.38.0
 gunicorn==23.0.0
 idna==3.10
+kombu==5.5.0
 packaging==24.2
+prompt_toolkit==3.0.50
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyJWT==2.10.1
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+redis==5.2.1
 requests==2.32.3
 rsa==4.9
+sentry-sdk==2.23.1
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
