--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Miscellaneous
 *.class
 *.log
-*.pyc
+
 *.swp
 .DS_Store
 .atom/
@@ -11,7 +11,12 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-bs_backend/__pycache__
+
+# ---- backend ---- 
+__pycache__
+*.pyc
+
+# ---- mobile ----
 
 # IntelliJ related
 *.iml
