--- a/bs_mobile/pubspec.yaml
+++ b/bs_mobile/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   dio: ^5.8.0+1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
