--- a/bs_mobile/pubspec.yaml
+++ b/bs_mobile/pubspec.yaml
@@ -40,6 +40,10 @@ flutter:
 
   assets:
     - assets/images/logo.png
+fonts:
+  - family: IconFont
+    fonts:
+      - asset: assets/fonts/iconfont.ttf
 
 flutter_native_splash:
   color: "#FFFFFF"
