--- a/bs_mobile/pubspec.yaml
+++ b/bs_mobile/pubspec.yaml
@@ -39,7 +39,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/logo.png
+    # - assets/images/logo.png
+    - assets/images/logo2.png
 fonts:
   - family: IconFont
     fonts:
@@ -48,7 +49,12 @@ fonts:
 flutter_native_splash:
   color: "#FFFFFF"
   color_dark: "#000000"
-  image: assets/images/logo.png
+  image: assets/images/logo2.png
 
+  android: true
+  ios: true
+
+flutter_icons:
+  image_path: "assets/images/logo2.png"
   android: true
   ios: true
