--- a/bs_mobile/pubspec.yaml
+++ b/bs_mobile/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   dio: ^5.8.0+1
   shared_preferences: ^2.5.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,9 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   riverpod_generator: ^2.6.5
+  build_runner: ^2.4.15
+  freezed: ^3.0.6
+  json_serializable: ^6.9.4
 
 flutter:
   uses-material-design: true
